--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,13 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<meta charset="UTF-8">
 <head>
-	<title></title>
+	{% block base_meta %}
+	<meta charset="UTF-8">
+	{% endblock base_meta %}
+	{% block meta %}
+	{% endblock meta %}
+	<title>{% block title %}{% endblock title %}</title>
 	{% block base_css %}
 	{% endblock base_css %}
 	{% block css %}
