--- a/control/templates/control/base.html
+++ b/control/templates/control/base.html
@@ -7,14 +7,6 @@
 {% block base_css %}
 <!-- Bootstrap -->
 <link href = "//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel = "stylesheet">
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-
-<!--[if lt IE 9]>
-<script src = "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src = "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
 {% endblock base_css %}
 {% block content %}
 {% block nav_bar %}
@@ -32,3 +24,15 @@
 	{% endblock inner_content %}
 </div>
 {% endblock content %}
+{% block base_js %}
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+
+<!--[if lt IE 9]>
+<script src = "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src = "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+<script id="angularScript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-resource.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.min.js"></script>
+{% endblock base_js %}
