--- a/control/templates/control/index.html
+++ b/control/templates/control/index.html
@@ -1,3 +1,34 @@
 {% extends 'control/base.html' %}
+
 {% load static %}
+
 {% block title %}people one{% endblock title %}
+
+{% block inner_content %}
+{% verbatim %}
+<div ng-app="myApp">
+	<div ng-controller="ServiceIndexCtrl">
+		{{ servicios.results }}
+	</div>
+</div>
+{% endverbatim %}
+{% endblock inner_content %}
+
+{% block js %}
+<script type="text/javascript">
+(function(){
+	var app = angular.module('myApp', ['ngResource']);
+
+	app.factory("Service", function($resource) {
+	  return $resource("/api/services/:id");
+	});
+
+	app.controller("ServiceIndexCtrl", function($scope, Service) {
+	  	Service.query(function(data) {
+	  	console.log(data);
+	    $scope.servicios = data;
+    });
+});
+})()
+</script>
+{% endblock js %}
