--- a/control/templates/control/index.html
+++ b/control/templates/control/index.html
@@ -7,18 +7,22 @@
 {% block inner_content %}
 {% verbatim %}
 <div ng-app="myApp">
-	<div ng-controller="ServiceShowCtrl">
-		{{ servicio }}
-	</div>
 	<div ng-controller="ServiceIndexCtrl">
 		count {{ servicios[0] }}
 		previous {{ servicios[1] }}
 		next {{ servicios[2] }}
-		<ul>
-			<li ng-repeat="servicio in servicios[3]">
-				{{ $index }} {{ servicio }}
-			</li>
-		</ul>
+		<table class="table" id="services">
+			<thead>
+				<tr>
+					<th>nombre</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="servicio in servicios[3]">
+					<td>{{ servicio.name }}</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </div>
 {% endverbatim %}
@@ -28,10 +32,6 @@
 <script type="text/javascript">
 (function(){
 	var app = angular.module('myApp', ['ngResource']);
-
-	//app.config(['$qProvider', function ($qProvider) {
-	//    $qProvider.errorOnUnhandledRejections(false);
-	//}]);
 
 	app.factory("Service", function($resource) {
 		return $resource(
@@ -72,5 +72,9 @@
 		});
 	});
 })()
+
+$(document).ready(function() {
+    $('#services').DataTable();
+});
 </script>
 {% endblock js %}
